@@ -1,5 +1,6 @@
 Changes for 1.0beta14:
 
+ - pinger to work for all hosts (ip and hostname-based) (Alexei)
  - fixed memory[cached] to work for both linux 2.4 and 2.6 (Alexei)
  - do not link crypt and crypto to the agent (Alexei)
  - fixed report1.php to work under FreeBSD (Alexei)
